--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,16 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Jua', sans-serif;
 }
 
 h1.title {
-    font-size: 18px;
+    font-size: 35px;
     margin: 0;
     padding: 12px 0 12px 12px;
-    background: #e9e9e9;
+    background: rgb(211, 211, 211);
+    font-weight: 100;
+    text-align: center;
 }
 
 #original {
@@ -22,13 +25,14 @@ h1.title {
 }
 
 #download-button {
-    margin: 0 16px;
+    width: 300px;
+    margin: 0 10px;
     cursor: pointer;
     outline: none;
     color: #333;
     background-color: white;
     border: 1px solid #333333;
-    padding: 12px 18px;
+    padding: 6px 18px;
     font-size: 16px;
     border-radius: 4px;
 }
